--- a/server/views/pages/courtAppearance/sentencing-appearance-details.njk
+++ b/server/views/pages/courtAppearance/sentencing-appearance-details.njk
@@ -205,84 +205,95 @@
             {{ govukButton({
                 text: "Add an offence" ,
                 classes: "govuk-button--link",
-                href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/offences/" + courtAppearance.offences | length + "/add-another-offence",
+                href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/offences/" + appearance.offences | length + "/add-another-offence",
                 attributes: {
                     "data-qa": "addAnotherOffence"
                 }
             }) }}
 
             <h3 class="govuk-heading-s govuk-!-margin-top-8">Offences with custodial outcomes</h3>
+            <span data-qa="custodialOffences">
+            {% for offence in custodialOffences %}
+                {{ offenceCard({
+            offenceCode: offence.offenceCode,
+            offenceName: offenceMap[offence.offenceCode],
+            offenceStartDate: offence.offenceStartDate | formatDate,
+            offenceEndDate: offence.offenceEndDate | formatDate,
+            outcome: outcomeMap[offence.outcomeUuid] | chargeOutcomeOrLegacy(offence.legacyData),
+            countNumber: offence.sentence.countNumber,
+            convictionDate: offence.sentence.convictionDate | formatDate,
+            terrorRelated: offence.terrorRelated,
+            isSentenced: offence.sentence,
+            periodLengths: offence.sentence.periodLengths,
+            sentenceServeType: offence.sentence.sentenceServeType,
+            consecutiveTo: offence.sentence.consecutiveTo,
+            sentenceType: sentenceTypeMap[offence.sentence.sentenceTypeId] | sentenceTypeValueOrLegacy(offence.sentence.legacyData),
+            fineAmount: offence.sentence.fineAmount,
+            actions: {
+                items: [
+                    {
+                        href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference +"/offences/" + offence.index + "/edit-offence",
+                        text: "Edit",
+                        visuallyHiddenText: "edit offence"
+                    },
+                    {
+                        href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference +"/offences/" + offence.index + "/delete-offence",
+                        text: "Delete",
+                        visuallyHiddenText: "delete offence"
+                    }
+                ]
+            }
+        }) }}
+            {% else %}
+                {{ govukInsetText({
+                            text: "There are no offences with custodial outcomes."
+                        }) }}
+            {% endfor %}
+            </span>
 
-    {% for offence in custodialChangedOffences %}
-        {{
-                    offenceCard({
-                        offenceCode: offence.offenceCode,
-                        offenceName: offenceMap[offence.offenceCode],
-                        offenceStartDate: offence.offenceStartDate | formatDate if offence.offenceStartDate else 'Not entered',
-                        offenceEndDate: offence.offenceEndDate | formatDate,
-                        outcome: outcomeMap[offence.outcomeUuid] | chargeOutcomeOrLegacy(offence.legacyData),
-                        outcomeUpdated: offence.updatedOutcome,
-                        countNumber: offence.sentence.countNumber,
-                        convictionDate: offence.sentence.convictionDate | formatDate,
-                        terrorRelated: offence.terrorRelated,
-                        isSentenced: offence.sentence,
-                        periodLengths: offence.sentence.periodLengths,
-                        sentenceType: sentenceTypeMap[offence.sentence.sentenceTypeId] if offence.sentence,
-                        fineAmount: offence.sentence.fineAmount,
-                        actions: {
-                            items: [
-                                {
-                                    href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/offences/" + offence.index + "/edit-offence",
-                                    text: "Edit",
-                                    visuallyHiddenText: "edit offence"
-                                }
-                            ]
-                        }
-                    })
-                }}
-    {% else %}
-        {{ govukInsetText({
-                    text: "There are no offences with custodial outcomes."
+            <h3 class="govuk-heading-s govuk-!-margin-top-8">Offences with non-custodial outcomes</h3>
+
+            {% for offence in nonCustodialOffences %}
+                {{ offenceCard({
+                    offenceCode: offence.offenceCode,
+                    offenceName: offenceMap[offence.offenceCode],
+                    offenceStartDate: offence.offenceStartDate | formatDate,
+                    offenceEndDate: offence.offenceEndDate | formatDate,
+                    outcome: outcomeMap[offence.outcomeUuid] | chargeOutcomeOrLegacy(offence.legacyData),
+                    countNumber: offence.sentence.countNumber,
+                    convictionDate: offence.sentence.convictionDate | formatDate,
+                    terrorRelated: offence.terrorRelated,
+                    isSentenced: offence.sentence,
+                    periodLengths: offence.sentence.periodLengths,
+                    sentenceServeType: offence.sentence.sentenceServeType,
+                    consecutiveTo: offence.sentence.consecutiveTo,
+                    sentenceType: sentenceTypeMap[offence.sentence.sentenceTypeId] if offence.sentence,
+                    fineAmount: offence.sentence.fineAmount,
+                    actions: {
+                        items: [
+                            {
+                                href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference +"/offences/" + offence.index + "/edit-offence",
+                                text: "Edit",
+                                visuallyHiddenText: "edit offence"
+                            },
+                            {
+                                href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference +"/offences/" + offence.index + "/delete-offence",
+                                text: "Delete",
+                                visuallyHiddenText: "delete offence"
+                            }
+                        ]
+                    }
                 }) }}
-    {% endfor %}
-
-    <h3 class="govuk-heading-s govuk-!-margin-top-8">Offences with non-custodial outcomes</h3>
-
-    {% for offence in nonCustodialChangedOffences %}
-        {{
-                    offenceCard({
-                        offenceCode: offence.offenceCode,
-                        offenceName: offenceMap[offence.offenceCode],
-                        offenceStartDate: offence.offenceStartDate | formatDate if offence.offenceStartDate else 'Not entered',
-                        offenceEndDate: offence.offenceEndDate | formatDate,
-                        outcome: outcomeMap[offence.outcomeUuid] | chargeOutcomeOrLegacy(offence.legacyData),
-                        outcomeUpdated: offence.updatedOutcome,
-                        countNumber: offence.sentence.countNumber,
-                        convictionDate: offence.sentence.convictionDate | formatDate,
-                        terrorRelated: offence.terrorRelated,
-                        isSentenced: offence.sentence,
-                        periodLengths: offence.sentence.periodLengths,
-                        sentenceType: sentenceTypeMap[offence.sentence.sentenceTypeId] if offence.sentence,
-                        fineAmount: offence.sentence.fineAmount,
-                        actions: {
-                            items: [
-                                {
-                                    href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/offences/" + offence.index + "/edit-offence",
-                                    text: "Edit",
-                                    visuallyHiddenText: "edit offence"
-                                }
-                            ]
-                        }
-                    })
-                }}
-    {% else %}
-        {{ govukInsetText({
-                    text: "There are no offences with non-custodial outcomes."
-                }) }}
-    {% endfor %}
-
+            {% else %}
+                {{ govukInsetText({
+                            text: "There are no offences with non-custodial outcomes.",
+                            classes: "govuk-!-margin-top-2",
+                            attributes: {
+                                'data-qa': 'noNonCustodialOutcomeInset'
+                            }
+                        }) }}
+            {% endfor %}
             
-
             <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-sentencing-details-edit">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
                 <div class="govuk-button-group">
