RASS-993 button content change

--- a/server/views/pages/sentencing/check-overall-answers.njk
+++ b/server/views/pages/sentencing/check-overall-answers.njk
@@ -122,9 +122,9 @@
                 <button type="submit"
                         class="govuk-button"
                         data-module="govuk-button"
-                        data-qa="confirm-and-add-offence"
+                        data-qa="confirm-and-continue"
                         formaction="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/SENTENCING/submit-check-overall-answers">
-                    Confirm and add offences
+                    Confirm and continue
                 </button>
             </div>
         </form>
