--- a/server/views/pages/sentencing/overall-conviction-date.njk
+++ b/server/views/pages/sentencing/overall-conviction-date.njk
@@ -2,6 +2,8 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/date-input/macro.njk" import govukDateInput %}
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
+{% from "govuk/components/inset-text/macro.njk" import govukInsetText %}
+
 
 
 {% set yesHtml %}
@@ -58,6 +60,13 @@
                             classes: "govuk-fieldset__legend--l",
                             isPageHeading: true
                         }
+                    },
+                    hint: {
+                        html: govukInsetText({ 
+                                text: "This is not always the same as the sentencing date. You can find the conviction date on the Prison court register.",
+                                classes: "govuk-!-margin-top-3",
+                                attributes: {  'data-qa': 'hintInset' }
+                            })
                     },
                     errorMessage: errors | findError('overallConvictionDateAppliedAll'),
                     items: [
