--- a/server/views/pages/sentencing/is-sentence-consecutive-to.njk
+++ b/server/views/pages/sentencing/is-sentence-consecutive-to.njk
@@ -5,7 +5,7 @@
 {% set pageTitle = applicationName + " - Is sentence consecutive to" %}
 
 {% block pageContent %}
-            <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/offences/{{ offenceReference }}/submit-is-sentence-consecutive-to{{ "?submitToEditOffence=true" if submitToEditOffence }}">
+            <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/SENTENCING/offences/{{ offenceReference }}/submit-is-sentence-consecutive-to{{ "?submitToEditOffence=true" if submitToEditOffence }}">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
                 {% include "../../partials/offenceCaption.njk" %}
 
@@ -21,7 +21,7 @@
                     },
                     errorMessage:  errors | findError('isSentenceConsecutiveTo'),
                     hint: {
-                        text: offenceDetails.code " " + offenceDetails.description + " committed on " + offence.offenceStartDate | formatDate + (" to " + offence.offenceEndDate | formatDate if offence.offenceEndDate else '')
+                        text: offenceDetails.code + " " + offenceDetails.description + " committed on " + offence.offenceStartDate | formatDate + (" to " + offence.offenceEndDate | formatDate if offence.offenceEndDate else "")
                     },
                     items: [
                         {
