--- a/server/views/pages/sentencing/first-sentence-consecutive-to.njk
+++ b/server/views/pages/sentencing/first-sentence-consecutive-to.njk
@@ -33,8 +33,8 @@
                                 <h3 class="govuk-heading-s"> {{appearance.courtCaseReference + ' at ' if appearance.courtCaseReference}}{{courtMap[appearance.courtCode]}} on {{appearance.appearanceDate | formatDate}}</h3>
                                 {% for sentence in appearance.sentences | sortByCountNumber %}
                                     <div class="govuk-radios__item">
-                                        <input class="govuk-radios__input" id="consecutiveToSentenceUuid-{{radioIdIndex}}" name="consecutiveToSentenceUuid" type="radio" value="{{sentence.sentenceUuid}}">
-                                        <label class="govuk-label govuk-radios__label" for="consecutiveToSentenceUuid-{{radioIdIndex}}">
+                                        <input class="govuk-radios__input" id="consecutiveToSentenceUuid{{'-' + radioIdIndex if radioIdIndex > 0 else ''}}" name="consecutiveToSentenceUuid" type="radio" value="{{sentence.sentenceUuid}}">
+                                        <label class="govuk-label govuk-radios__label" for="consecutiveToSentenceUuid{{'-' + radioIdIndex if radioIdIndex > 0 else ''}}">
                                             {% if sentence.countNumber%}
                                                 Count {{sentence.countNumber}}<br>
                                             {% endif %}
