--- a/server/views/pages/sentencing/first-sentence-consecutive-to.njk
+++ b/server/views/pages/sentencing/first-sentence-consecutive-to.njk
@@ -7,6 +7,7 @@
 {% set pageTitle = applicationName + " - first sentence consecutive to" %}
 
 {% set errorMessage = errors | findError('consecutiveToSentenceUuid') %}
+{% set radioIdIndex = 0 %}
 {% block pageContent %}
             <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/SENTENCING/offences/{{ offenceReference }}/submit-first-sentence-consecutive-to{{ "?submitToEditOffence=true" if submitToEditOffence }}">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
@@ -32,8 +33,8 @@
                                 <h3 class="govuk-heading-s"> {{appearance.courtCaseReference + ' at ' if appearance.courtCaseReference}}{{courtMap[appearance.courtCode]}} on {{appearance.appearanceDate | formatDate}}</h3>
                                 {% for sentence in appearance.sentences | sortByCountNumber %}
                                     <div class="govuk-radios__item">
-                                        <input class="govuk-radios__input" id="consecutiveToSentenceUuid" name="consecutiveToSentenceUuid" type="radio" value="{{sentence.sentenceUuid}}">
-                                        <label class="govuk-label govuk-radios__label" for="consecutiveToSentenceUuid">
+                                        <input class="govuk-radios__input" id="consecutiveToSentenceUuid{{'-' + radioIdIndex if radioIdIndex > 0 else ''}}" name="consecutiveToSentenceUuid" type="radio" value="{{sentence.sentenceUuid}}">
+                                        <label class="govuk-label govuk-radios__label" for="consecutiveToSentenceUuid{{'-' + radioIdIndex if radioIdIndex > 0 else ''}}">
                                             {% if sentence.countNumber%}
                                                 Count {{sentence.countNumber}}<br>
                                             {% endif %}
@@ -45,6 +46,7 @@
                                             {% endif %}
                                         </label>
                                     </div>
+                                    {% set radioIdIndex=radioIdIndex + 1 %}
                                 {% endfor %}
                             </div>
                         {% endfor %}
