sub-header updated

--- a/server/views/partials/offenceCaption.njk
+++ b/server/views/partials/offenceCaption.njk
@@ -2,6 +2,6 @@
     {% if isAddOffences %}
         Add offences
     {% else %}
-        Review offences
+        Update offence outcomes
     {% endif %}
 </span>
