--- a/server/views/pages/offence/period-length.njk
+++ b/server/views/pages/offence/period-length.njk
@@ -53,9 +53,9 @@
                     <a href="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/offences/{{ offenceReference }}/alternative-period-length?periodLengthType={{periodLengthType}}{{ "&submitToEditOffence=true" if submitToEditOffence }}">The {{ periodLengthHeader }} is formatted differently</a>
                 </p>
 
-                {% if sentenceTypeClassification === 'SOPC' %}
+                {% if sentenceTypeHint %}
                     {{ govukInsetText({
-                    text: "For SOPC sentences a mandatory license period of 12 months is automatically added to the sentence."
+                    text: sentenceTypeHint
                     }) }}
                 {% endif %}
 
