tests files added for alternative period length

--- a/server/views/pages/offence/alternative-period-length.njk
+++ b/server/views/pages/offence/alternative-period-length.njk
@@ -2,7 +2,7 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/fieldset/macro.njk" import govukFieldset %}
 {% from "../../components/alternativeSentenceLength/macro.njk" import alternativeSentenceLength%}
-{% set pageTitle = applicationName + " - Add sentence length" %}
+{% set pageTitle = applicationName + " - Add " + periodLengthHeader %}
 
 {% block pageContent %}
             <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/offences/{{ offenceReference }}/submit-alternative-period-length?periodLengthType={{periodLengthType}}{{ "?submitToEditOffence=true" if submitToEditOffence }}">
