RASS-1014 court case details consecutive to details displayed

--- a/server/views/pages/courtCaseDetails.njk
+++ b/server/views/pages/courtCaseDetails.njk
@@ -172,7 +172,7 @@
                         isSentenced: charge.sentence,
                         periodLengths: charge.sentence.periodLengths | periodLengthsToSentenceLengths,
                         sentenceServeType: charge.sentence.sentenceServeType,
-                        consecutiveTo: charge.sentence.consecutiveToChargeNumber,
+                        consecutiveTo: consecutiveToSentenceDetailsMap[charge.sentence.consecutiveToSentenceUuid],
                         sentenceType: charge.sentence.sentenceType.description | sentenceTypeValueOrLegacy(charge.sentence.legacyData),
                         fineAmount: charge.sentence.fineAmount.fineAmount,
                         detailsClasses: 'govuk-!-padding-4'
