--- a/server/views/pages/courtAppearance/appearance-details.njk
+++ b/server/views/pages/courtAppearance/appearance-details.njk
@@ -207,7 +207,7 @@
                             isSentenced: offence.sentence,
                             periodLengths: offence.sentence.periodLengths,
                             sentenceServeType: offence.sentence.sentenceServeType,
-                            consecutiveTo: offence.sentence.consecutiveTo,
+                            consecutiveTo: consecutiveToSentenceDetailsMap[offence.sentence.consecutiveToSentenceUuid],
                             sentenceType: sentenceTypeMap[offence.sentence.sentenceTypeId] | sentenceTypeValueOrLegacy(offence.sentence.legacyData),
                             fineAmount: offence.sentence.fineAmount,
                             actions: {
