--- a/server/views/pages/sentencing/sentence-consecutive-to.njk
+++ b/server/views/pages/sentencing/sentence-consecutive-to.njk
@@ -3,7 +3,7 @@
 {% from "govuk/components/fieldset/macro.njk" import govukFieldset %}
 {% from "govuk/components/error-message/macro.njk" import govukErrorMessage %}
 {% from "govuk/components/hint/macro.njk" import govukHint %}
-
+{% from "govuk/components/inset-text/macro.njk" import govukInsetText %}
 
 {% set pageTitle = applicationName + " - sentence consecutive to" %}
 
@@ -78,6 +78,12 @@
                                     {% set radioIdIndex=radioIdIndex + 1 %}
                                 {% endfor %}
                             </div>
+                        {% else %}
+                            {{
+                                govukInsetText({
+                                    text: 'There are no available sentences on other cases to select'
+                                })
+                            }}
                         {% endfor %}
                         </div>
                     {% endcall %}
