RASS-1073-overall-sentence-length-fix

--- a/server/views/pages/offence/check-offence-answers.njk
+++ b/server/views/pages/offence/check-offence-answers.njk
@@ -13,7 +13,7 @@
                             text: "Overall sentence length"
                         },
                         value: {
-                            text: courtAppearance.overallSentenceLength | formatLengths if courtAppearance.overallConvictionDate else "Not entered"
+                            text: courtAppearance.overallSentenceLength | formatLengths if courtAppearance.overallSentenceLength else "Not entered"
                         }
                     }]%}
 
