RASS-1079 call overall sentence length on sentencing appearance details

--- a/server/views/pages/sentencing/appearance-details.njk
+++ b/server/views/pages/sentencing/appearance-details.njk
@@ -198,7 +198,7 @@
             {{ govukSummaryList({
                 rows: offenceRows,
                 attributes: {
-                    "data-qa": "offenceSummaryList"
+                    "data-qa": "overallSummaryList"
                 }
             }) }}
 
