--- a/assets/scss/application.scss
+++ b/assets/scss/application.scss
@@ -15,4 +15,5 @@ $govuk-page-width: $moj-page-width;
 @import './components/content-top';
 @import './components/action-list';
 @import './components/alternative-sentence-length';
+@import './components/tags';
 @import './local';
