RASS-998 styling fix

--- a/server/views/pages/start.njk
+++ b/server/views/pages/start.njk
@@ -199,7 +199,7 @@
                                              if courtCaseDetails.overallCaseStatus == "INACTIVE" else ({
                                                 href: null,
                                                 html: govukTag({
-                                                    text: "RECALLED",
+                                                    text: "Recalled",
                                                     classes: "govuk-tag--purple"
                                                 }),
                                                 visuallyHiddenText: "Recalled"
