RASS-1044 make fields unedited after check answers

--- a/server/views/pages/courtAppearance/check-answers.njk
+++ b/server/views/pages/courtAppearance/check-answers.njk
@@ -80,7 +80,7 @@
                         text: "Edit",
                         visuallyHiddenText: "overall case outcome"
                     }
-                ]
+                ] if courtAppearance.appearanceInformationAccepted !== true
             }
         },
         {
@@ -97,7 +97,7 @@
                         text: "Edit",
                         visuallyHiddenText: "Is the outcome the same for all offences on the warrant?"
                     }
-                ]
+                ] if courtAppearance.appearanceInformationAccepted !== true
             }
         }
     ]) %}
